# MLR

./: .gitignore  CMAKELists.txt  MANIFEST.in  README.md  cibuildwheel.toml  pyproject.toml  script.sh  setup.py  workflow.sh
.github/workflows/: build.yml
MLR/: mlr_wrapper.py  test.py
MLR/examples/: Example.ipynb  benchmarks_USDA.ipynb
MLR/notebooks/: MLR.ipynb
MLR/src/: CMAKELists.txt  bindings.cpp
MLR/tests/: test_model.py  test_summary.py
include/: mlr.hpp
src/: bindings.cpp  mlr.cpp  mlr_cpp.cpp  test  test.cpp
