[build-system]
requires = ["setuptools >= 77.0.3","pybind11", "wheel","cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
version = "1.0.1"
name = "mlr_cpp"
description = "A high-performance Multiple Linear Regression model implemented in C++ with a clean Python API via Pybind11 bindings"
dependencies = [
    "pandas >= 2.2.3",
    "pybind11 >= 2.13.6",
]

[project.optional-dependencies]
examples = ["matplotlib", "jupyter", "scikit-learn"] #pip install mlr_cpp[examples]
dev = ["pytest", "build", "twine"] #pip install mlr_cpp[dev]

readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [
    {name = "Sidhant Raj Khati",email = "sidhant.raj.khati@gmail.com"}
]
keywords = ["Machine Learning", "Linear Regression", "Multiple Linear Regression", "C++", "Python", "Python3"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research"
]

[project.urls]
Repository = "https://github.com/Sidhant-1299/mlr_cpp.git"


[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = "pp*"
before-all = "uname -a"
environment = { CXXFLAGS = "-std=c++20" }

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]